[gd_scene load_steps=2 format=3 uid="uid://bb4b1islgbvyo"]

[ext_resource type="Script" uid="uid://b56wkvge5sj87" path="res://addons/pandora_plus/extensions/status_effect_property/ui_component/status_effect_property.gd" id="1_wd1u5"]

[node name="StatusEffect" type="MarginContainer"]
offset_right = 600.0
offset_bottom = 120.0
script = ExtResource("1_wd1u5")
type = "status_effect_property"
metadata/_custom_type_script = "uid://bvl8qiojdoihh"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="FirstLine" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusID" type="VBoxContainer" parent="VBoxContainer/FirstLine"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/FirstLine/StatusID"]
layout_mode = 2
text = "ID / Source"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/FirstLine/StatusID"]
layout_mode = 2

[node name="StatusKey" type="VBoxContainer" parent="VBoxContainer/FirstLine"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FirstLine/StatusKey"]
layout_mode = 2
text = "Status"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/FirstLine/StatusKey"]
layout_mode = 2
size_flags_vertical = 3
item_count = 5
popup/item_0/text = "POISONING"
popup/item_0/id = 0
popup/item_1/text = "BLEEDING"
popup/item_1/id = 1
popup/item_2/text = "BURNING"
popup/item_2/id = 2
popup/item_3/text = "HEALING"
popup/item_3/id = 3
popup/item_4/text = "RECOVER"
popup/item_4/id = 4

[node name="StackingRules" type="VBoxContainer" parent="VBoxContainer/FirstLine"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/FirstLine/StackingRules"]
layout_mode = 2
text = "Stacking Rule"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/FirstLine/StackingRules"]
layout_mode = 2
button_pressed = true
text = "Yes"

[node name="SecondLine" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusDescription" type="VBoxContainer" parent="VBoxContainer/SecondLine"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/SecondLine/StatusDescription"]
layout_mode = 2
text = "Description"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SecondLine/StatusDescription"]
layout_mode = 2

[node name="StatusDuration" type="VBoxContainer" parent="VBoxContainer/SecondLine"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SecondLine/StatusDuration"]
layout_mode = 2
text = "Duration"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/SecondLine/StatusDuration"]
layout_mode = 2
focus_mode = 1
min_value = -1.0
max_value = 99999.0
select_all_on_focus = true

[node name="TickSystemContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TickSystemContainer"]
layout_mode = 2
text = "Tick System"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TickSystemContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TickSystemContainer/MarginContainer"]
layout_mode = 2

[node name="TickType" type="VBoxContainer" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer/TickType"]
layout_mode = 2
text = "Type"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer/TickType"]
layout_mode = 2
size_flags_vertical = 3
item_count = 3
popup/item_0/text = "DAMAGE"
popup/item_0/id = 0
popup/item_1/text = "HEALING"
popup/item_1/id = 1
popup/item_2/text = "RECOVER"
popup/item_2/id = 2

[node name="Ticks" type="VBoxContainer" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer/Ticks"]
layout_mode = 2
text = "Ticks"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer/Ticks"]
layout_mode = 2
focus_mode = 1
max_value = 99999.0
rounded = true
select_all_on_focus = true

[node name="ValuePerTick" type="VBoxContainer" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer/ValuePerTick"]
layout_mode = 2
text = "Value per tick"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer/ValuePerTick"]
layout_mode = 2
focus_mode = 1
max_value = 99999.0
select_all_on_focus = true

[node name="ValueInPercentage" type="CheckButton" parent="VBoxContainer/TickSystemContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "%"

[connection signal="toggled" from="VBoxContainer/FirstLine/StackingRules/CheckButton" to="." method="_on_stacking_rule_toggled"]
